fix order between transactions and blocks added flex-wrap do responsive design

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -31,12 +31,12 @@
 
   .list-column-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
   }
   .list-row-container {
     display: flex;
-    // flex-wrap: wrap;
+    flex-wrap: wrap;
     justify-content: space-around;
   }
   .list-wrapper {
